# ROBOT_DOG

./: CMakeLists.txt  README.md  main.cpp
inc/: algorithm_control.hpp  common.hpp  imu.hpp  motor.hpp  motor_control.hpp  motor_protect.hpp  serial_init.hpp
pre_train/: model_jitt.pt
src/: algorithm_control.cpp  imu.cpp  motor.cpp  motor_control.cpp  motor_protect.cpp  serial_init.cpp
